--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,3 +106,11 @@ form input[type="text"]::placeholder {
 hr {
     margin: 30px 0;
 }
+
+.logout-form {
+background: none;
+box-shadow: none;
+padding: 0;
+margin: 0;
+max-width: none;
+}
